--- a/vscdotfiles/C/launch.json
+++ b/vscdotfiles/C/launch.json
@@ -1,1 +1,22 @@
-/home/diketene/C/.vscode/launch.json
+{
+    // 使用 IntelliSense 了解相关属性。 
+    // 悬停以查看现有属性的描述。
+    // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "name": "Debug C",
+            "type": "cppdbg",
+            "request":"launch",
+            "program":"${workspaceFolder}/bin/${fileBasenameNoExtension}",
+            "args":[],
+            "cwd":"${workspaceFolder}",
+            "MIMode":"gdb",
+            "miDebuggerPath": "/usr/bin/gdb",
+            "environment": [],
+            "externalConsole": false,
+            "preLaunchTask": "C/C++: gcc 生成活动文件",
+            "stopAtEntry": false
+        }
+    ]
+}
