增加了settings.json和c_cpp_properties.json配置文件

--- a/vscdotfiles/C/tasks.json
+++ b/vscdotfiles/C/tasks.json
@@ -11,7 +11,10 @@
                 "${file}",
                 "-lm",
                 "-o",
-                "${fileDirname}/bin/${fileBasenameNoExtension}"
+                "${fileDirname}/bin/${fileBasenameNoExtension}",
+                "-llapacke",
+                "-llapack",
+                "-lblas"
             ],
             "options": {
                 "cwd": "${fileDirname}"
