--- a/vscdotfiles/C/tasks.json
+++ b/vscdotfiles/C/tasks.json
@@ -28,7 +28,7 @@
         {
             "type": "cppbuild",
             "label": "C++: g++ 生成活动文件",
-            "command": "/usr/bin/g++",
+            "command": "/gcc13.3.0/bin/g++",
             "args": [
                 "-std=c++20",
                 "-fdiagnostics-color=always",
@@ -47,7 +47,7 @@
                 "kind": "build",
                 "isDefault": true
             },
-            "detail": "调试器生成的任务。"
+            "detail": "编译器：/gcc13.3.0/bin/g++"
         }
     ]
 }
