为C++添加了eigen数值计算库

--- a/vscdotfiles/C/tasks.json
+++ b/vscdotfiles/C/tasks.json
@@ -35,7 +35,8 @@
                 "-g",
                 "${file}",
                 "-o",
-                "${fileDirname}/bin/${fileBasenameNoExtension}"
+                "${fileDirname}/bin/${fileBasenameNoExtension}",
+                "-I/usr/include/eigen3/Eigen/**"
             ],
             "options": {
                 "cwd": "${fileDirname}"
