--- a/vscdotfiles/C/launch.json
+++ b/vscdotfiles/C/launch.json
@@ -31,6 +31,20 @@
             "externalConsole": false,
             "preLaunchTask": "C++: g++ 生成活动文件",
             "stopAtEntry": false
+        },
+        {
+            "name": "Released C++",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/bin/${fileBasenameNoExtension}",
+            "args":[],
+            "cwd":"${workspaceFolder}",
+            "MIMode":"gdb",
+            "miDebuggerPath": "/usr/bin/gdb",
+            "environment": [],
+            "externalConsole": false,
+            "preLaunchTask": "C++: g++ 生成活动文件(Released)",
+            "stopAtEntry": false
         }
     ]
 }
