--- a/vscdotfiles/C/tasks.json
+++ b/vscdotfiles/C/tasks.json
@@ -38,7 +38,8 @@
                 "${fileDirname}/bin/${fileBasenameNoExtension}",
                 "-I/usr/include/eigen3/Eigen/**",
                 "-I/home/diketene/mdspan/include/**",
-                "-I/boost/boost_1_86_0/**"
+                "-I/boost/boost_1_86_0/**",
+                "-I/usr/local/include"
             ],
             "options": {
                 "cwd": "${fileDirname}"
@@ -51,6 +52,34 @@
                 "isDefault": true
             },
             "detail": "编译器：/gcc13.3.0/bin/g++"
+        },
+        {
+            "type": "cppbuild",
+            "label": "C++: g++ 生成活动文件(Released)",
+            "command": "/gcc13.3.0/bin/g++",
+            "args": [
+                "-std=c++20",
+                "-fdiagnostics-color=always",
+                "-O2",
+                "${file}",
+                "-o",
+                "${fileDirname}/bin/${fileBasenameNoExtension}",
+                "-I/usr/include/eigen3/Eigen/**",
+                "-I/home/diketene/mdspan/include/**",
+                "-I/boost/boost_1_86_0/**",
+                "-I/usr/local/include"
+            ],
+            "options": {
+                "cwd": "${fileDirname}"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "detail": "编译器：/gcc13.3.0/bin/g++"  
         }
     ]
 }
