--- a/vscdotfiles/C/launch.json
+++ b/vscdotfiles/C/launch.json
@@ -45,6 +45,20 @@
             "externalConsole": false,
             "preLaunchTask": "C++: g++ 生成活动文件(Released)",
             "stopAtEntry": false
+        },
+        {
+            "name": "Clang C++(Debug)",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/bin/${fileBasenameNoExtension}",
+            "args":[],
+            "cwd": "${workspaceFolder}",
+            "MIMode": "gdb",
+            "miDebuggerPath": "/usr/bin/gdb",
+            "environment": [],
+            "externalConsole": false,
+            "preLaunchTask": "C++: Clang++ 生成活动文件",
+            "stopAtEntry": false
         }
     ]
 }
