--- a/vscdotfiles/C/tasks.json
+++ b/vscdotfiles/C/tasks.json
@@ -111,6 +111,37 @@
                 "isDefault": true
             },
             "detail": "编译器：/usr/local/clang/bin/clang++"
+        },
+        {
+            "type": "cppbuild",
+            "label": "C++: Clang++生成活动文件(Released)",
+            "command": "/usr/local/clang/bin/clang++",
+            "args":[
+                "-std=c++20",
+                "-stdlib=libc++",
+                "-fcolor-diagnostics",
+                "-O2",
+                "${file}",
+                "-o",
+                "${fileDirname}/bin/${fileBasenameNoExtension}",
+                "-I/usr/local/clang/include/**",
+                "-I/usr/include/eigen3/Eigen/**",
+                "-I/home/diketene/mdspan/include/**",
+                "-I/boost/boost_1_86_0/**",
+                "-I/usr/local/include",
+                "-L/usr/local/clang/lib/x86_64-unknown-linux-gnu/**"
+            ],
+            "options": {
+                "cwd": "${fileDirname}"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "detail": "编译器：/usr/local/clang/bin/clang++"
         }
     ]
 }
