--- a/vscdotfiles/C/tasks.json
+++ b/vscdotfiles/C/tasks.json
@@ -30,7 +30,7 @@
             "label": "C++: g++ 生成活动文件",
             "command": "/gcc13.3.0/bin/g++",
             "args": [
-                "-std=c++20",
+                "-std=c++23",
                 "-fdiagnostics-color=always",
                 "-g",
                 "${file}",
@@ -58,7 +58,7 @@
             "label": "C++: g++ 生成活动文件(Released)",
             "command": "/gcc13.3.0/bin/g++",
             "args": [
-                "-std=c++20",
+                "-std=c++23",
                 "-fdiagnostics-color=always",
                 "-O2",
                 "${file}",
@@ -86,13 +86,15 @@
             "label": "C++: Clang++ 生成活动文件",
             "command": "/usr/local/clang/bin/clang++",
             "args": [
-                "-std=c++20",
+                "-std=c++23",
                 "-stdlib=libc++",
                 "-fcolor-diagnostics",
+                "-fmodule-file=std=/usr/local/clang/share/libc++/v1/std.pcm",
                 "-g",
-                "${file}",
                 "-o",
                 "${fileDirname}/bin/${fileBasenameNoExtension}",
+                "/usr/local/clang/share/libc++/v1/std.pcm",
+                "${file}",
                 "-I/usr/local/clang/include/**",
                 "-I/usr/include/eigen3/Eigen/**",
                 "-I/home/diketene/mdspan/include/**",
@@ -117,13 +119,15 @@
             "label": "C++: Clang++生成活动文件(Released)",
             "command": "/usr/local/clang/bin/clang++",
             "args":[
-                "-std=c++20",
+                "-std=c++23",
                 "-stdlib=libc++",
                 "-fcolor-diagnostics",
+                "-fmodule-file=std=/usr/local/clang/share/libc++/v1/std.pcm",
                 "-O2",
-                "${file}",
                 "-o",
                 "${fileDirname}/bin/${fileBasenameNoExtension}",
+                "/usr/local/clang/share/libc++/v1/std.pcm",
+                "${file}",
                 "-I/usr/local/clang/include/**",
                 "-I/usr/include/eigen3/Eigen/**",
                 "-I/home/diketene/mdspan/include/**",
