添加了clangd对CUDA的支持

--- a/config.yaml
+++ b/config.yaml
@@ -19,3 +19,18 @@ CompileFlags:
   Add: [
     "-std=c17"
   ]
+
+---
+
+If:
+  PathMatch: [.*\.cu]
+CompileFlags:
+  Add: [
+    "--cuda-gpu-arch=sm_89",
+    "--cuda-path=/usr/local/cuda",
+    "-I/usr/local/clang/lib/clang/20/include",
+    "-I/usr/local/clang/include/c++/v1",
+    "-stdlib=libc++",
+    "-L/usr/local/clang/lib",
+    "-Wl,-rpath,/usr/local/clang/lib"
+  ]
