--- a/config.yaml
+++ b/config.yaml
@@ -15,11 +15,11 @@ If:
   PathMatch: [.*\.c, .*\.h]
 CompileFlags:
   Add: [
+		"-xc",
     "-std=c17",
-    "-I/usr/local/clang/lib/clang/20/include",
-    "-I/usr/local/clang/include/c++/v1",
-    "-I/usr/local/clang/include/x86_64-unknown-linux-gnu/c++/v1",
-    "-stdlib=libc++"
+#   "-I/usr/local/clang/lib/clang/20/include",
+#    "-I/usr/local/clang/include/c++/v1",
+#    "-I/usr/local/clang/include/x86_64-unknown-linux-gnu/c++/v1",
   ]
 
 ---
