--- a/config
+++ b/config
@@ -1,13 +1,14 @@
 #配置Ubuntu服务器的快捷登录
 
 Host ub
-    User diketene
-    HostName 192.168.0.101
-    IdentityFile ~/.ssh/id_ed25519
-    LocalForward 9999 localhost:8888
+	User diketene
+	HostName 192.168.0.101
+	IdentityFile ~/.ssh/id_ed25519
+	LocalForward 9999 localhost:8888
 
 Host github.com
-    User Diketene
-    HostName github.com
-    IdentityFile ~/.ssh/id_rsa
-    AddKeysToAgent yes
+	HostName ssh.github.com
+	Port 443
+	User git
+	IdentityFile ~/.ssh/id_rsa
+	AddKeysToAgent yes
